--- a/content/settings.json
+++ b/content/settings.json
@@ -2,14 +2,14 @@
   "name": "Lusayo Nyondo",
   "title": "Software Engineer",
   "tagline": "Python (Django/FastAPI) • TypeScript (Next.js/React/Node) • Dart (Flutter) • Java (Kafka/Flink)",
-  "summary": "Software Engineer with strong experience across web, mobile, and data engineering. Comfortable building resilient systems with Django, FastAPI, Next.js/React, Flutter, and real-time data pipelines on Kafka/Flink/Airflow.",
-  "email": "",
+  "summary": "Software Engineer with strong experience across web, mobile, desktop, and data engineering. Comfortable building resilient systems with Django, FastAPI, Next.js/React, Flutter, and real-time data pipelines on Kafka/Flink/Airflow.",
+  "email": "lusayohendy@gmail.com",
   "location": "",
   "social": {
-    "github": "",
-    "linkedin": "",
-    "twitter": "",
-    "youtube": ""
+    "github": "https://github.com/lusayo-nyondo",
+    "linkedin": "https://www.linkedin.com/in/lusayo-nyondo",
+    "twitter": "https://x.com/@lusayo_ny",
+    "youtube": "https://youtube.com/@project_sayo"
   },
-  "hashnodeHost": "your-hashnode-subdomain.hashnode.dev"
+  "hashnodeHost": "projectsayo.hashnode.dev"
 }
